--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Playfair,wght@1,400;1,500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Trocchi&display=swap');
 
 *{
   margin: 0;
@@ -12,8 +13,8 @@
   -moz-osx-font-smoothing: grayscale;
 }
 header{
-  border: 0px solid black;
-  padding: 1px 0px 0px 0px;
+  font-family: 'Trocchi', serif;
+  padding: 10px 0px 0px 0px;
   /*background-image: linear-gradient(180deg, rgba(32, 236, 255, 0.968),white); */
 }
 .search{
@@ -23,15 +24,10 @@ header{
   margin-left: 3vw;
 }
 .sea{
-  margin-left: 10vw; 
+  margin-left: -10vw; 
 }
 .fullnav{
-  margin-left: 10%;
-}
-@media screen and (min-width: 991px){
-  .fullnav{
-    margin-left: 25%;
-  }
+  margin-left: 5%;
 }
 .post{
   display: grid;
@@ -99,5 +95,22 @@ header{
 }
 .newpost{
   height: 100vh;
+}
+
+@media screen and (min-width: 991px){
+  .navbr{
+    margin-left: 20vw;
+  }
+  .sea{
+    margin-left: 20vw; 
+  }
+  .fullnav{
+    margin-left: 15%;
+  }
+}
+@media only screen and (max-width: 480px) {
+  header{
+    display: none;
+  }
 }
 
